# naturalsql

./: README.md  package-lock.json  package.json  tailwind.config.js  task.md
.qwen/: settings.json  settings.json.orig
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  query.rs
src-tauri/src/db/: connection.rs  schema.rs
src/components/: AnalysisChat.tsx  AutoChart.tsx  ConnectionModal.tsx  ConnectionPanel.tsx  DataEditPreview.tsx  DataStatistics.tsx  ErDiagram.tsx  ExplainPlan.tsx  JoinBuilder.tsx  LlmConfigPanel.tsx  MigrationPreview.tsx  QueryEditor.tsx  QueryTabs.tsx  ResultActions.tsx  ResultVisualization.tsx  ResultsTable.tsx  SchemaAdvisor.tsx  SchemaBrowser.tsx  SparklineChart.tsx  TableStructure.tsx  ThemeToggle.tsx  ToolCallTrace.tsx
src/components/dashboard/: DashboardGrid.tsx
src/hooks/: useTheme.ts
